--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,19 @@
 .App-link {
   color: #61dafb;
 }
+body {
+  padding: 30px 0;
+}
+
+.App {
+  text-align: center;
+}
+
+h1 {
+  font-family: 'Grenze Gotisch', cursive;
+  font-size: 72px;
+  color: #0ccac4;
+}
 
 @keyframes App-logo-spin {
   from {
